--- a/index.html
+++ b/index.html
@@ -1,23 +1,41 @@
 <!--Name- Rajvansh Singh
-    Email- singhrajvansh68@gmail.com-->
-    <!Doctype Html>
-    <html>
-        <html lang="en">
-            <head>
-                <meta charset="UTF-8">
-                <meta name ="viewport " content = "width=device-width, initial-scale=1.0">
-                  <title> First Task</title>
-                  <h1>Assignment</h1>
-                    <body>
-                    <header>
-                        In class Task-1
-                    </header>
-                    <p>
-                        Hello Everyone,My name is Rajvansh Singh.I am student in Computer Programming (Waterloo Campus).I am a very confident person.I love Reading books.I have read some amazing books like Atomic habits(James Clear) and Can't hurt me (David Goggins)
-                    </p>
-                    <p>
-                        I am planning to study in University of Toronto,I will try my best to become a Software Engineer and earn (Two Lakh Dollars). I am a very hardworking student and I am confident that I will be worth of earning that. I am very regular in going to gym,working out and giving it my all. I know how to overcome anxiousness and laziness and give it my 100% in everything I try.
-                    </p>
-                </body>
-            </head>
-    </Html>
+Email- singhrajvansh68@gmail.com-->
+<!Doctype Html>
+<html>
+    <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta name ="viewport " content = "width=device-width, initial-scale=1.0">
+            <link rel="stylesheet"type="text/css" href="normalize.css">
+            <link rel="stylesheet"type="text/css" href="styles.css">
+                <title> Second Task</title>
+                <h1 style="color: red; font-size: 24px; ">In Class Task-2</h1>
+                <body>
+                    <style>
+                        ul {
+                            list-style-type: circle; /* Change the bullet style */
+                        }
+
+                        li {
+                            line-height: 1.4; /* Increase line height */
+                            color: rgba(113, 131, 60, 0.8); /* Change font color */
+                        }
+                        a{ 
+                            color: rgba(21, 193, 49, 0.8); /* Change font color */
+                        }
+                    </style>
+                <p>
+                    Hello Everyone,My name is Rajvansh Singh.I am student in Computer Programming (Waterloo Campus).I am a very confident person.I love Reading books.I have read some amazing books like Atomic habits(James Clear) and Can't hurt me (David Goggins)
+                </p>
+                <p>
+                    I am planning to study in University of Toronto,I will try my best to become a Software Engineer and earn (Two Lakh Dollars). I am a very hardworking student and I am confident that I will be worth of earning that. I am very regular in going to gym,working out and giving it my all. I know how to overcome anxiousness and laziness and give it my 100% in everything I try.
+                </p>
+                <h2>Famous Websites </h2>
+                <u1>
+                    <li><a href="C:\WebFoundations\Tasks\download.html">Link 1</a></li>
+                    <li><a href="C:\WebFoundations\Tasks\en.html">Link 2</a></li>
+                        </u1>
+                    
+            </body>
+        </head>
+</Html>
