--- a/index.html
+++ b/index.html
@@ -1,51 +1,53 @@
-<!--Name- Rajvansh Singh
-Email- singhrajvansh68@gmail.com-->
-<!Doctype Html>
-<html>
-    <html lang="en">
-        <head>
-            <meta charset="UTF-8">
-            <meta name ="viewport " content = "width=device-width, initial-scale=1.0">
-            <link rel="stylesheet"type="text/css" href="normalize.css">
-            <link rel="stylesheet"type="text/css" href="styles.css">
-                <title> Third Task</title>   
-                <style>
-                    ul {
-                        list-style-type: circle; /* Change the bullet style */
-                    }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="normalize.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Fourth Task</title>
+    <style>
+        ul {
+            list-style-type: circle;
+        }
 
-                    li {
-                        line-height: 1.4; /* Increase line height */
-                        color: rgba(113, 131, 60, 0.8); /* Change font color */
-                    }
-                    a{ 
-                        color: rgba(21, 193, 49, 0.8); /* Change font color */
-                    }
-                </style>
-                
-                <body>
-                    <header>
-                        <h1 style="color: red; font-size: 24px; ">In Class Task-3</h1>
-                    </header>
-                   <main class="structural">
-                    <p id ="paragraph1">
-                        Hello Everyone,My name is Rajvansh Singh.I am student in Computer Programming (Waterloo Campus).I am a very confident person.I love Reading books.I have read some amazing books like Atomic habits(James Clear) and Can't hurt me (David Goggins)
-                    </p>
-                    <p id ="paragraph2">
-                        I am planning to study in University of Toronto,I will try my best to become a Software Engineer and earn (Two Lakh Dollars). I am a very hardworking student and I am confident that I will be worth of earning that. I am very regular in going to gym,working out and giving it my all. I know how to overcome anxiousness and laziness and give it my 100% in everything I try.
-                    </p>
-                   
-                   </main>
-                   <aside class="structural">
-                    <h2>Famous Websites </h2>
-                    <u1>
-                        <li><a href="C:\WebFoundations\Tasks\download.html">Link 1</a></li>
-                        <li><a href="C:\WebFoundations\Tasks\en.html">Link 2</a></li>
-                            </u1>
-                   </aside>
-                   <footer class ="structural">
-                    <p>&#169; Rajvansh Singh - <span id="currentYear">2023</span></p>
-                </footer>  
-            </body>
-        </head>
-</Html>
+        li {
+            line-height: 1.4;
+            color: rgba(113, 131, 60, 0.8);
+        }
+
+        a {
+            color: rgba(21, 193, 49, 0.8);
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>In Class Task-4</h1>
+    </header>
+    <nav class="structural">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    <main class="structural">
+        <p id="paragraph1">
+            Hello Everyone, My name is Rajvansh Singh. I am a student in Computer Programming (Waterloo Campus). I am a very confident person. I love reading books. I have read some amazing books like Atomic habits (James Clear) and Can't hurt me (David Goggins).
+        </p>
+        <p id="paragraph2">
+            I am planning to study at the University of Toronto. I will try my best to become a Software Engineer and earn Two Lakh Dollars. I am a very hardworking student, and I am confident that I will be worth earning that. I am very regular in going to the gym, working out, and giving it my all. I know how to overcome anxiousness and laziness and give it my 100% in everything I try.
+        </p>
+    </main>
+    <aside class="structural">
+        <h2>Famous Websites</h2>
+        <ul>
+            <li><a href="C:\WebFoundations\Tasks\download.html">Link 1</a></li>
+            <li><a href="C:\WebFoundations\Tasks\en.html">Link 2</a></li>
+        </ul>
+    </aside>
+    <footer class="structural">
+        <p>&#169; Rajvansh Singh - <span id="currentYear">2023</span></p>
+    </footer>
+</body>
+</html>
