--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- Name-Rajvansh Singh
-     Email-singhrajvansh68@gmail.com--><!DOCTYPE html>
+     Email-singhrajvansh68@gmail.com-->
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
