--- a/gallery.html
+++ b/gallery.html
@@ -21,14 +21,23 @@
         </ul>
     </nav>
     <section>
-        <main class="structural">
-            <h2>My Introduction</h2>
-            <p id="paragraph1">
-                Hello Everyone, My name is Rajvansh Singh. I am a student in Computer Programming (Waterloo Campus). I am a very confident person. I love reading books. I have read some amazing books like Atomic habits (James Clear) and Can't hurt me (David Goggins).
-            </p>
-            <p id="paragraph2">
-                I am planning to study at the University of Toronto. I will try my best to become a Software Engineer and earn Two Lakh Dollars. I am a very hardworking student, and I am confident that I will be worth earning that. I am very regular in going to the gym, working out, and giving it my all. I know how to overcome anxiousness and laziness and give it my 100% in everything I try.
-            </p>
+        <main class="structural" id="gallery">
+            <figure>
+                <img src="images/html.png " alt="Representating Html" >
+                <figcaption>Html</figcaption>
+            </figure>
+            <figure>
+                <img src="images/css.jpg"alt="Representating CSS ">
+                <figcaption>CSS</figcaption>
+            </figure>
+            <figure>
+                <img src="images/git-github.png"alt="Representating Github">
+                <figcaption>GitHub</figcaption>
+            </figure>
+            <figure>
+                <img src="images/vscode_background.jpg" alt="fOR vISUAL STUDIO CODE BACKGROUND">
+                <figcaption>VSCode</figcaption>
+            </figure>
         </main>
         <aside class="structural">
             <h2>Famous Websites</h2>
@@ -38,7 +47,7 @@
             </ul>
         </aside>
     </section>
-
+    
     <footer class="structural">
         <p>&#169; Rajvansh Singh - <span id="currentYear">2023</span></p>
     </footer>
